<?xml version="1.0" encoding="utf-8"?>
<resources>
 
    <string name="app_name">Keizai Works Android</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello_world</string>
	<string name="fetch_data_btn">Fetch Data!</string>
	<string name="app_desc">Hello and thank you for using the alpha app. This is being powered by (temp) http://keizaiworks.mypressonline.com\nPlease donate a little and this app could be finished in no time.</string>
	<color name="app_background_color">#19B7F7</color>
	<string name="app_title_image_conDesc">Keizai Works Android app title</string>
	<string name="fetch_data_label">Fetch National Data</string>
    <color name="stats_bg_color">#ececec</color>
    <string name="login_usr_lbl">Username</string>
    <string name="login_psw_lbl">password</string>
    <string name="login_btn">Login</string>
    <string name="userName">null</string>
 
</resources>
