<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:background="@color/app_background_color">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="229dp"
    android:background="@color/app_background_color" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_title_image_conDesc"
        android:src="@drawable/keizaiworksdroidbanner" />
    
     <Button
        android:id="@+id/local_fetch_data_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:text="@string/fetch_data_btn" />

    <TableLayout
        android:id="@+id/local_stats_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/local_fetch_data_btn" >
        
        <TableRow 
            tools:ignore="UselessParent"
            android:id="@+id/local_stats_table_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:padding="5dp"
                android:text="Stock Name" />

            <TextView
                android:background="@drawable/cell_shape" 
                android:padding="5dp"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="Quote">
            </TextView>
       </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/local_username_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="15dp"
        android:text="@string/userName"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
</ScrollView>